--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -19,6 +19,8 @@ spec:
       containers:
         - name: grocy
           image: linuxserver/grocy:latest
+          securityContext:
+            privileged: true
           ports:
             - containerPort: 80
           volumeMounts:
