--- a/templates/service-barcodebuddy.yaml
+++ b/templates/service-barcodebuddy.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-grocy
+  name: {{ .Release.Name }}-barcodebuddy
   labels:
     {{- include "grocy.labels" . | nindent 4 }}
 spec:
@@ -9,9 +9,6 @@ spec:
   selector:
     app: {{ .Release.Name }}-grocy
   ports:
-    - protocol: TCP
-      port: {{ .Values.service.port }}
-      targetPort: 80
     - protocol: TCP
       port: {{ .Values.barcodebuddy.port }}
       targetPort: {{ .Values.barcodebuddy.port }}
