--- a/values.yaml
+++ b/values.yaml
@@ -1,6 +1,6 @@
 # Storage configuration
-storageClass: "nfs-storage"
-basePath: "/mnt/spinning-rust/kubestorage"
+storageClass: "nfs-storage"  # Shared storage class for both Grocy and BarcodeBuddy
+basePath: "/mnt/spinning-rust"
 
 # Deployment configuration
 replicaCount: 1
@@ -11,6 +11,10 @@ service:
   type: LoadBalancer
   port: 80
 
-# Scanner device configuration
-scannerDevicePath: "/dev/input/by-id/usb-HELLO_USB__i_MM32_Custm_HID_MM32-event-kbd"  # Default path for the keyboard scanner device
+# BarcodeBuddy-specific configuration
+barcodebuddy:
+  enabled: true
+  port: 7272
 
+# Scanner device configuration
+scannerDevicePath: "/dev/input/by-id/usb-HELLO_USB__i_MM32_Custm_HID_MM32-event-kbd"
