--- a/templates/service-barcodebuddy.yaml
+++ b/templates/service-barcodebuddy.yaml
@@ -11,4 +11,4 @@ spec:
   ports:
     - protocol: TCP
       port: {{ .Values.barcodebuddy.port }}
-      targetPort: {{ .Values.barcodebuddy.port }}
+      targetPort: 80
