--- a/templates/service-barcodebuddy.yaml
+++ b/templates/service-barcodebuddy.yaml
@@ -9,6 +9,7 @@ spec:
   selector:
     app: {{ .Release.Name }}-grocy
   ports:
-    - protocol: TCP
+    - name: barcodebuddy-http
+      protocol: TCP
       port: {{ .Values.barcodebuddy.port }}
       targetPort: 80
