Adding barcode scanner env?

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -45,6 +45,8 @@ spec:
           env:
             - name: GROCY_URL
               value: "http://{{ .Release.Name }}-grocy.{{ .Release.Namespace }}.svc.cluster.local:{{ .Values.service.port }}"
+            - name: ATTACH_BARCODESCANNER
+              value: true
           volumeMounts:
             - name: barcodebuddy-data
               mountPath: /config  # Separate storage path for BarcodeBuddy data
