adding scanner device

--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -33,6 +33,9 @@ spec:
               mountPropagation: HostToContainer
               subPath: viewcache
               readOnly: false
+            - name: scanner-device
+              mountPath: {{ .Values.scannerDevicePath }}
+              readOnly: true
     
       volumes:
         - name: grocy-data
